k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: expense-app
  namespace: expense-dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: expense-app

  template:
    metadata:
      labels:
        app: expense-app

    spec:
      serviceAccountName: expense-app-sa
      containers:
        - name: expense-app

          image: nikitaharesh/expense-management-system:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8086

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 20
