k8s/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: expense-service
  namespace: expense-dev

spec:
  selector:
    app: expense-app

  ports:
    - port: 80
      targetPort: 8086

  type: ClusterIP
