k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: expense-ingress
  namespace: expense-dev

spec:
  ingressClassName: nginx

  rules:
    - host: expense.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: expense-service
                port:
                  number: 80
